Added recalculation
