# server/src/main/java/de/pnp/manager/server/service/character/PnPCharacterService.java
@@ -1,5 +1,6 @@
 package de.pnp.manager.server.service.character;
 
+import de.pnp.manager.component.character.dto.CharacterStatsDto;
 import de.pnp.manager.component.character.dto.PnPCharacterDTO;
 import de.pnp.manager.security.UniverseOwner;
 import de.pnp.manager.security.UniverseRead;
@@ -11,6 +12,7 @@ import org.springframework.web.bind.annotation.*;
 
 import java.util.Collection;
 import java.util.List;
+import java.util.Map;
 
 /**
  * Rest service to control characters
@@ -35,7 +37,17 @@ public class PnPCharacterService {
     @PostMapping
     @UniverseRead
     @Operation(summary = "Recalculates all entries of the character", operationId = "recalculateEntries")
-    public PnPCharacterDTO recalculateEntries(@PathVariable ObjectId universe, @RequestBody PnPCharacterDTO character) {
-        return converter.recalculateEntries(universe, character);
+    public RecalculateEntries recalculateEntries(@PathVariable ObjectId universe, @RequestBody PnPCharacterDTO character) {
+        PnPCharacterDTO dto = converter.recalculateEntries(universe, character);
+        return new RecalculateEntries(dto.stats().secondaryStats(), dto.talents());
+    }
+
+    /**
+     * Recalculated entries in a {@link CharacterStatsDto}
+     */
+    public record RecalculateEntries(
+            Map<ObjectId, CharacterStatsDto.StatsDto> secondaryStats,
+            Map<ObjectId, PnPCharacterDTO.TalentRollDto> talents
+    ) {
     }
 }
